[gd_scene load_steps=8 format=3 uid="uid://dyf6ln7mujvke"]

[ext_resource type="Theme" uid="uid://n3ns3n53r5ve" path="res://Assets/Resource/Themes/pixel/pixel_theme.tres" id="2_x82mv"]
[ext_resource type="Script" path="res://Main/Components/CallHistory/history_box.gd" id="3_50vf6"]
[ext_resource type="Texture2D" uid="uid://drduj4v7yj6y4" path="res://Assets/Textures/phone/call_history_icon1.png" id="3_ttp1m"]
[ext_resource type="Texture2D" uid="uid://cxu51j26f8ani" path="res://Assets/Textures/phone/call_history_icon2.png" id="4_ijeuc"]
[ext_resource type="Texture2D" uid="uid://d355rp373xulk" path="res://Assets/Textures/phone/call_history_icon3.png" id="5_pisi4"]
[ext_resource type="Texture2D" uid="uid://22k62oqs3okh" path="res://Assets/Textures/phone/call_history_icon4.png" id="6_ffdmf"]
[ext_resource type="Script" path="res://Main/Components/Missions/MissionLabel.gd" id="7_1ou2q"]

[node name="HistoryBox" type="Control"]
use_parent_material = true
custom_minimum_size = Vector2(296, 44)
layout_mode = 3
anchors_preset = 0
offset_right = 296.0
offset_bottom = 44.0
mouse_filter = 2
theme = ExtResource("2_x82mv")
script = ExtResource("3_50vf6")
in_icon = ExtResource("3_ttp1m")
out_icon = ExtResource("4_ijeuc")
missed_icon = ExtResource("5_pisi4")
failed_icon = ExtResource("6_ffdmf")

[node name="Button" type="Button" parent="."]
use_parent_material = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
use_parent_material = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
use_parent_material = true
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 8

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("3_ttp1m")
expand_mode = 5
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
use_parent_material = true
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="CallName" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Contact Name"
vertical_alignment = 1
script = ExtResource("7_1ou2q")

[node name="CallTime" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "01:05"
vertical_alignment = 1
script = ExtResource("7_1ou2q")

[node name="DateTime" type="Label" parent="MarginContainer/HBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 10
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
text = "21:35 yesterday"
vertical_alignment = 1

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
